config/webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
  namespace: automotive-dev-operator-system
  labels:
    app.kubernetes.io/name: webui
    app.kubernetes.io/part-of: automotive-dev-operator
    app.kubernetes.io/component: webui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: webui
